2013-01-18  Anton Kolesov <akolesov@synopsys.com>

	* run-tests.sh, run-elf32-tests.sh, run-uclibc-tests.sh, arc-init
	(run_check): Return non-zero value from scripts if there are failed tests.

2013-01-11  Jeremy Bennett <jeremy.bennett@embecosm.com>

	* arc-init.sh (run_check): Don't fail overall if make fails.

2013-01-10  Jeremy Bennett <jeremy.bennett@embecosm.com>

	* arc-init.sh (run_check, save_res): move functions to run tests
	and process results to this script. Clean up recording of results.
	* run-elf32-tests.sh, run-uclibc-tests.sh: New scripts
	incorporating target specific code from run-tests.sh.
	* run-tests.sh: split ELF and Linux tests out into their own
	scripts. Add options to allow just one or the other to be run.

2013-01-08  Jeremy Bennett <jeremy.bennett@embecosm.com>

	* run-tests.sh: Minor tidy ups to directory names etc.

2013-01-08  Jeremy Bennett <jeremy.bennett@embecosm.com>

	* run-tests.sh: Script to run all the regression tests.

2012-12-23  Jeremy Bennett <jeremy.bennett@embecosm.com>

	* dejagnu: New directory for DejaGnu specific testing
	* dejagnu/baseboards: New directory for ARC specific DejaGnu board
	descriptions.
	* dejagnu/baseboards/arc-linux-aa4.exp,
	* dejagnu/baseboards/arc-sim-base.exp,
	* dejagnu/baseboards/arc-sim-mdb.exp,
	* dejagnu/baseboards/arc-sim.exp, dejagnu/baseboards/arc600-sim.exp,
	* dejagnu/ftp-extra.exp, dejagnu/telnet-extra.exp, site.exp:
	Transferred from ARC 4.4 tool chain in Subversion.

2012-12-23  Jeremy Bennett <jeremy.bennett@embecosm.com>

	* ChangeLog: Incorporated historical record prior to transferring
	to git.

2012-12-12  Jeremy Bennett <jeremy.bennett@embecosm.com>

	* build-cleanup.sh: New script.

2012-12-12  Jeremy Bennett <jeremy.bennett@embecosm.com>

	* arc-versions.sh: Simplified to use just --auto-checkout and
	--auto-pull options for all repositories.
	* build-all.sh: Add --auto-checkout/--no-auto-checkout and
	--no-auto-pull. Remove linux_user_spec.
